# data-simulator

./: .gitignore  CLAUDE.md  GITHUB_ACTIONS_SETUP.md  README.md  Sample_dag_description.txt  package-lock.json  package.json  playwright.config.ts
backend/: FORMULA_PARSER_USAGE.md  IMPLEMENTATION_SUMMARY.md  MIGRATIONS.md  QUICK_START_SAMPLER.md  README.md  SAMPLER_DOCUMENTATION.md  SAMPLER_IMPLEMENTATION_SUMMARY.md  alembic.ini  demo_distributions.py  generate_golden_hashes.py  pyproject.toml  requirements.txt  test_sampler_example.py
backend/alembic/: env.py
backend/alembic/versions/: 410951e71f9d_create_projects_and_dag_versions_tables.py  51a385b65326_add_model_type_index_to_model_fits.py  6feacc458288_add_dag_version_public_sharing.py  (+7 more)
backend/app/: __init__.py  main.py
backend/docs/: model_registry.md
backend/tests/: README_DETERMINISM.md  test_alembic_tenant_visibility_migration.py  test_api_generate.py  test_async_jobs.py  test_constraints.py  test_context_meta.py  test_determinism_golden.py  test_distribution_registry.py  test_distributions_extended.py  test_evaluation.py  test_formula_parser.py  test_hashing.py  test_migrations.py  test_model_registry.py  test_modeling_api_authz.py  test_modeling_service.py  test_persistence.py  test_pipeline_service.py  test_pipeline_upload.py  test_pipelines_api.py  test_projects_api.py  test_rate_limiting.py  test_sampler.py  test_scopes.py  test_sources_api.py  test_tenant_authz_and_forking_api.py  test_topological_sort.py  test_upload_source.py  test_ux_metrics_api.py  test_validator.py  test_viewport_layout.py
(+172 files in other folders)
